3.0.4 2013-09-??
ChangeLog
========
 * cacher
   * fixed #323: refix locking impl for threaded env

3.0.3 2013-06-18
ChangeLog
========
 * clean files in release (fix htdocs config)

3.0.2 2013-06-10
ChangeLog
========
 * cacher:
   * fixed #296: (PHP5.4+ only bug), racecondition Multiple instances of the same software causes PHP "cannot redeclare class" errors when readonly_protection is not in use
   * fixed #301: refix locking impl
   * fixed #307: compatible with Zend Debugger which requires to be installed after Zend Extension Manager
 * admin
   * fixed #303: tablesort.js not found in Diagnosis and Coverager
 * misc
   * fixed #297: segv on startup under sparc, ini setting overflow

3.0.1 2013-01-11
ChangeLog
========
 * cacher:
   * fixed crash when cache is too small on start up
   * fixed #295: crash using traits with PHP 5.4.8+
   * fix random crash when cache is reinitialized yet failed (Thanks to Brad Baker for generating crash dump)
   * fix locking impl: improve stability on threaded env (Thanks to Mircea Nicolae for reproducing the bug)
 * optimizer:
   * (PHP_5_4) fix ZEND_JMP_SET_VAR
   * (PHP_5_4) fix for goto
 * diagnosis:
   * undefined variable when ini is not found
 * misc:
   * fixed #290: workaround phpize vs fbsd make bug again
   * improve compatibility with "the ionCube PHP Loader", Zend Optimizer

3.0.0 2012-10-29
API Changes
========
 * chg: proto array xcache_clear_cache(int type, [ int id = -1 ]). -1 means all cache splits
 * new: proto array xcache_enable_cache(int type, [ int id = -1, [ bool enable = true ] ])
 * new: proto array xcache_admin_namespace()
 * new: proto array xcache_set_namespace(string namespace)

Ini Settings Changes
========
 * new: xcache.disable_on_crash = Off
 * new: xcache.coverager_autostart = On
 * new: xcache.allocator = bestfit (no other option value yet)
 * new: xcache.var_allocator = bestfit (no other option value yet)
 * new: xcache.var_namespace_mode = 0
 * new: xcache.var_namespace = ""

ChangeLog